<project xmlns="http://maven.apache.org/POM/4.0.0" 
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.cronical</groupId>
  <artifactId>RATClient</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
  </properties>

  <build>
    <sourceDirectory>${basedir}/src</sourceDirectory>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.1.0</version>
        <configuration>
          <executable>java</executable>
          <mainClass>com.cronical.client.Main</mainClass>
          <arguments>
            <argument>--add-opens</argument>
            <argument>java.desktop/javax.swing=ALL-UNNAMED</argument>
            <argument>--add-opens</argument>
            <argument>java.desktop/java.awt=ALL-UNNAMED</argument>
            <argument>--add-opens</argument>
            <argument>java.desktop/java.awt.image=ALL-UNNAMED</argument>
            <argument>-cp</argument>
            <classpath/>
            <argument>com.cronical.client.Main</argument>
          </arguments>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>sonatype-snapshots</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </repository>
    <repository>
      <id>sonatype-releases</id>
      <url>https://oss.sonatype.org/content/repositories/releases</url>
    </repository>
    <repository>
      <id>jcenter</id>
      <url>https://jcenter.bintray.com</url>
    </repository>
    <repository>
      <id>libs-release</id>
      <url>https://artifactory.esotericsoftware.com/artifactory/libs-release</url>
    </repository>
    <repository>
      <id>gradle-plugins</id>
      <url>https://plugins.gradle.org/m2</url>
    </repository>
  </repositories>

  <dependencies>
    <!-- Kryo for serialization -->
    <dependency>
      <groupId>com.esotericsoftware</groupId>
      <artifactId>kryo</artifactId>
      <version>4.0.2</version>
    </dependency>
    <dependency>
      <groupId>org.objenesis</groupId>
      <artifactId>objenesis</artifactId>
      <version>2.6</version>
    </dependency>
    <!-- KryoNet networking library -->
    <dependency>
      <groupId>com.esotericsoftware</groupId>
      <artifactId>kryonet</artifactId>
      <version>2.22.0-RC1</version>
    </dependency>
  </dependencies>
</project>